--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 body{
     background-color: white;
 }
+
+.proyecto{
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+#proyecto-2{
+    background-image: url('assets/Rovacach.png');
+}
+
+#presentacion{
+    height: 90vh;
+    display:flex;
+    align-items: center;
+}
